--- a/examples/launcher.html
+++ b/examples/launcher.html
@@ -3,76 +3,17 @@
   <body>
     <script src="three.js"></script>
     <script>
-let renderer, scene, camera, iframe, planeMesh, boxMeshes, controllerMeshes, focused;
-
-const localVector = new THREE.Vector3();
-const localVector2 = new THREE.Vector3();
-const localVector3 = new THREE.Vector3();
-const localCoord = new THREE.Vector2();
-const localPlane = new THREE.Plane();
-const localLine = new THREE.Line3();
-const localLine2 = new THREE.Line3();
-const localRaycaster = new THREE.Raycaster();
-
-const planeWorldWidth = 0.9;
-const planeWorldHeight = 0.9;
-const boxMeshSize = 0.02;
-const planeWidth = 1280;
-const planeHeight = 1024;
-
-const _makeControllerMesh = () => {
-  const geometry = new THREE.CylinderBufferGeometry(0.001, 0.001, 1, 32, 1)
-    .applyMatrix(new THREE.Matrix4().makeRotationX(-Math.PI / 2))
-    .applyMatrix(new THREE.Matrix4().makeTranslation(0, 0, -0.5));
-  const material = new THREE.MeshBasicMaterial({
-    color: 0x9ccc65,
-  });
-
-  const mesh = new THREE.Mesh(geometry, material);
-  mesh.position.y = -1;
-  mesh.updateMatrixWorld();
-  // mesh.visible = true;
-  mesh.frustumCulled = false;
-  return mesh;
-};
-const _getControllerIndex = inputSource => inputSource.handedness === 'left' ? 0 : 1;
+let canvas, context, fbo, camera, iframe;
 
 function init() {
-  renderer = new THREE.WebGLRenderer({
-    antialias: true,
-    alpha: true,
-  });
-  renderer.setPixelRatio(window.devicePixelRatio);
-  renderer.setSize(window.innerWidth, window.innerHeight);
-
-  // window.browser.magicleap.RequestDepthPopulation(true);
-  // renderer.autoClear = false;
-
-  document.body.appendChild(renderer.domElement);
-
-  scene = new THREE.Scene();
-  scene.matrixAutoUpdate = false;
-  // scene.background = new THREE.Color(0x3B3961);
-
-  camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-  // camera.position.set(0, 1, 0);
-  // camera.lookAt(new THREE.Vector3());
-  scene.add(camera);
-
-  const ambientLight = new THREE.AmbientLight(0x808080);
-  scene.add(ambientLight);
-
-  const directionalLight = new THREE.DirectionalLight(0xFFFFFF, 1);
-  directionalLight.position.set(1, 1, 1);
-  scene.add(directionalLight);
-
-  controllerMeshes = [
-    _makeControllerMesh(),
-    _makeControllerMesh(),
-  ];
-  controllerMeshes.forEach(controllerMesh => {
-    scene.add(controllerMesh);
-  });
+  canvas = document.createElement('canvas');
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+  context = canvas.getContext('webgl');
+  
+  fbo = context.createFramebuffer();
+  
+  document.body.appendChild(canvas);
 
   iframe = document.createElement('iframe');
   iframe.d = 2;
@@ -104,133 +45,18 @@ function init() {
   };
   document.body.appendChild(iframe);
 
-  planeMesh = (() => {
-    const geometry = new THREE.PlaneBufferGeometry(planeWorldWidth, planeWorldHeight)
-      // .applyMatrix(new THREE.Matrix4().makeScale(-1, -1, 1));
-    const uvs = geometry.attributes.uv.array;
-    const numUvs = uvs.length / 2;
-    for (let i = 0; i < numUvs; i++) {
-      uvs[i*2+1] = 1 - uvs[i*2+1];
-    }
-    /* const material = new THREE.MeshPhongMaterial({
-      color: 0xFFFF00,
-    }); */
-    const texture = new THREE.Texture(
-      null,
-      THREE.UVMapping,
-      THREE.ClampToEdgeWrapping,
-      THREE.ClampToEdgeWrapping,
-      THREE.NearestFilter,
-      THREE.NearestFilter,
-      THREE.RGBAFormat,
-      THREE.UnsignedByteType,
-      16
-    );
-    const properties = renderer.properties.get(texture);
-    properties.__webglTexture = iframe.texture;
-    properties.__webglInit = true;
-    const material = new THREE.MeshBasicMaterial({
-      map: texture,
-    });
-    const mesh = new THREE.Mesh(geometry, material);
-    mesh.position.z = -1;
-    mesh.projectMouse = (x, y) => {
-      const leftLine = localLine;
-      const topLine = localLine2;
-      const plane = localPlane;
-      const raycaster = localRaycaster;
-
-      leftLine.start
-        .set(-planeWorldWidth/2, planeWorldHeight/2, 0)
-        .applyMatrix4(mesh.matrixWorld);
-      leftLine.end
-        .set(-planeWorldWidth/2, -planeWorldHeight/2, 0)
-        .applyMatrix4(mesh.matrixWorld);
-
-      topLine.start
-        .set(-planeWorldWidth/2, planeWorldHeight/2, 0)
-        .applyMatrix4(mesh.matrixWorld);
-      topLine.end
-        .set(planeWorldWidth/2, planeWorldHeight / 2, 0)
-        .applyMatrix4(mesh.matrixWorld);
-
-      plane.setFromCoplanarPoints(
-        leftLine.start,
-        leftLine.end,
-        topLine.end
-      );
-
-      raycaster.setFromCamera(localCoord.set((x/window.innerWidth - 0.5) * 2, (y/window.innerHeight - 0.5) * 2), camera);
-      const intersectionPoint = raycaster.ray.intersectPlane(plane, localVector);
-      if (intersectionPoint) {
-        const leftIntersectionPoint = leftLine.closestPointToPoint(intersectionPoint, true, localVector2);
-
-        const topIntersectionPoint = topLine.closestPointToPoint(intersectionPoint, true, localVector3);
-
-        const xFactor = topIntersectionPoint.distanceTo(topLine.start) / planeWorldWidth;
-        const yFactor = leftIntersectionPoint.distanceTo(leftLine.start) / planeWorldHeight;
-        const distance = raycaster.ray.origin.distanceTo(intersectionPoint);
-
-        if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < 3) {
-          const x = xFactor * window.innerWidth;
-          const y = (1 - yFactor) * window.innerHeight;
-
-          return localCoord.set(x, y);
-        } else {
-          return null;
-        }
-      } else {
-        return null;
-      }
-    };
-
-    return mesh;
-  })();
-  scene.add(planeMesh);
-
-  const _makeBoxMesh = () => {
-    const geometry = new THREE.BoxBufferGeometry(boxMeshSize, boxMeshSize, boxMeshSize);
-      // .applyMatrix(new THREE.Matrix4().makeTranslation(-planeWorldWidth/2, planeWorldHeight/2, boxMeshSize/2));
-    const material = new THREE.MeshPhongMaterial({
-      color: 0xFF0000,
-    });
-    const mesh = new THREE.Mesh(geometry, material);
-    return mesh;
-  };
-  boxMeshes = [
-    _makeBoxMesh(),
-    _makeBoxMesh(),
-  ];
-  for (let i = 0; i < boxMeshes.length; i++) {
-    scene.add(boxMeshes[i]);
-  }
-
   focused = true;
 
   window.addEventListener('mousemove', e => {
-    const coord = planeMesh.projectMouse(e.clientX, e.clientY);
-
-    if (coord) {
-      iframe.sendMouseMove(coord.x, coord.y);
-    }
+    iframe.sendMouseMove(e.clientX, e.clientY);
   });
   window.addEventListener('mousedown', e => {
-    const coord = planeMesh.projectMouse(e.clientX, e.clientY);
+    iframe.sendMouseDown(e.clientX, e.clientY, e.button); 
 
-    if (coord) {
-      iframe.sendMouseDown(coord.x, coord.y, e.button); 
-
-      focused = true;
-    } else {
-      focused = false;
-    }
+    focused = true;
   });
   window.addEventListener('mouseup', e => {
-    const coord = planeMesh.projectMouse(e.clientX, e.clientY);
-
-    if (coord) {
-      iframe.sendMouseUp(coord.x, coord.y,e.button);
-    }
+    iframe.sendMouseUp(e.clientX, e.clientY, e.button);
   });
   window.addEventListener('wheel', e => {
     if (focused) {
@@ -266,83 +92,22 @@ function init() {
 
 init();
 
-let direction = true;
-const controllerCoords = [
-  [0, 0],
-  [0, 0],
-];
-const lastPresseds = [false, false];
 function animate(timestamp, frame) {
-  for (let i = 0; i < controllerMeshes.length; i++) {
-    controllerMeshes[i].visible = false;
-  }
+  window.requestAnimationFrame(animate);
 
-  /* const inputSources = display.session.getInputSources();
-  for (let i = 0; i < inputSources.length; i++) {
-    const inputSource = inputSources[i];
-    const pose = frame.getInputPose(inputSource);
+  context.bindFramebuffer(context.READ_FRAMEBUFFER, fbo);
+  context.framebufferTexture2D(context.READ_FRAMEBUFFER, context.COLOR_ATTACHMENT0, context.TEXTURE_2D, iframe.browser.texture, 0);
 
-    const controllerIndex = _getControllerIndex(inputSource);
-    const controllerMesh = controllerMeshes[controllerIndex];
-    controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
-    controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
-    controllerMesh.updateMatrixWorld(true);
-    controllerMesh.visible = true;
+  context.bindFramebuffer(context.DRAW_FRAMEBUFFER, 0);
 
-    const leftLine = localLine;
-    const topLine = localLine2;
-    const plane = localPlane;
-    const raycaster = localRaycaster;
+  context.clearColor(1, 1, 1, 1);
+  context.clear(context.COLOR_BUFFER_BIT);
 
-    leftLine.start
-      .set(-planeWorldWidth/2, planeWorldHeight/2, 0)
-      .applyMatrix4(planeMesh.matrixWorld);
-    leftLine.end
-      .set(-planeWorldWidth/2, -planeWorldHeight/2, 0)
-      .applyMatrix4(planeMesh.matrixWorld);
+  context.blitFramebuffer(0, 0, canvas.width, canvas.height, 0, canvas.height, canvas.width, 0, context.COLOR_BUFFER_BIT, context.LINEAR);
 
-    topLine.start
-      .set(-planeWorldWidth/2, planeWorldHeight/2, 0)
-      .applyMatrix4(planeMesh.matrixWorld);
-    topLine.end
-      .set(planeWorldWidth/2, planeWorldHeight / 2, 0)
-      .applyMatrix4(planeMesh.matrixWorld);
-
-    plane.setFromCoplanarPoints(
-      leftLine.start,
-      leftLine.end,
-      topLine.end
-    );
-
-    raycaster.set(controllerMesh.position, localVector.set(0, 0, -1).applyQuaternion(controllerMesh.quaternion));
-    const intersectionPoint = raycaster.ray.intersectPlane(plane, localVector);
-    if (intersectionPoint) {
-      const leftIntersectionPoint = leftLine.closestPointToPoint(intersectionPoint, true, localVector2);
-
-      const topIntersectionPoint = topLine.closestPointToPoint(intersectionPoint, true, localVector3);
-
-      const xFactor = topIntersectionPoint.distanceTo(topLine.start) / planeWorldWidth;
-      const yFactor = leftIntersectionPoint.distanceTo(leftLine.start) / planeWorldHeight;
-      const distance = raycaster.ray.origin.distanceTo(intersectionPoint);
-
-      if (xFactor > 0 && xFactor <= 0.99 && yFactor > 0 && yFactor <= 0.99 && distance < 3) {
-        const SCROLL_SCALE = 3; // constant in libmlservo
-        const x = (xFactor * planeWidth)/SCROLL_SCALE;
-        const y = (yFactor * planeHeight)/SCROLL_SCALE;
-
-        controllerCoords[controllerIndex][0] = x;
-        controllerCoords[controllerIndex][1] = y;
-
-        iframe.sendMouseMove(x, y);
-
-        boxMeshes[controllerIndex].position.copy(intersectionPoint);
-        boxMeshes[controllerIndex].updateMatrixWorld();
-      }
-    }
-  } */
-
-  renderer.render(scene, camera);
+  context.finish();
 }
+window.requestAnimationFrame(animate);
 
 /* if (navigator.xr) {
   (async () => {
@@ -379,9 +144,9 @@ function animate(timestamp, frame) {
     .catch(err => {
       console.warn(err.stack);
     });
-} else { */
+} else {
   renderer.setAnimationLoop(animate);
-// }
+} */
 
     </script>
   </body>
