--- a/examples/launcher.html
+++ b/examples/launcher.html
@@ -3,22 +3,111 @@
   <body>
     <script src="three.js"></script>
     <script>
-let canvas, context, fbo, camera, iframe, isMacOs;
+let renderer, scene, camera, screenQuad, iframe;
+
+window.ScreenQuad = (() => {
+
+      const defaultQuad = new THREE.PlaneBufferGeometry(2, 2, window.innerWidth, window.innerHeight);
+      const uvs = defaultQuad.attributes.uv.array;
+      const numUvs = uvs.length / 2;
+      for (let i = 0; i < numUvs; i++) {
+        uvs[i*2+1] = 1 - uvs[i*2+1];
+      }
+
+      const vertexShader = `\
+        varying vec2 vUv;
+        void main() {
+          gl_Position = vec4(position.xy, 1., 1.);
+          vUv = uv;
+        }
+      `;
+      const fragmentShader = `\
+        varying vec2 vUv;
+        uniform sampler2D uTexture;
+        void main() {
+          gl_FragColor = texture2D(uTexture, vUv);
+        }
+      `;
+
+      function ScreenQuad( params ){
+
+        params = params || {};
+
+        THREE.Mesh.apply( this, [ defaultQuad , new THREE.ShaderMaterial({
+
+          uniforms:{
+            uTexture: {
+              type: 't',
+              value: params.texture,
+            },
+          },
+
+          vertexShader,
+
+          fragmentShader,
+
+          transparent: true,
+
+        })]);
+
+        this.frustumCulled = false;
+
+        this.renderOrder = -1;
+
+        //end mesh setup
+
+      }
+
+      ScreenQuad.prototype = Object.create( THREE.Mesh.prototype );
+
+      ScreenQuad.constructor = ScreenQuad;
+
+      return ScreenQuad
+
+})();
 
 function init() {
-  canvas = document.createElement('canvas');
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-  context = canvas.getContext('webgl');
-  
-  fbo = context.createFramebuffer();
-  
-  document.body.appendChild(canvas);
+  renderer = new THREE.WebGLRenderer({
+    antialias: true,
+    alpha: true,
+  });
+  renderer.setPixelRatio(window.devicePixelRatio);
+  renderer.setSize(window.innerWidth, window.innerHeight);
+
+  document.body.appendChild(renderer.domElement);
+
+  scene = new THREE.Scene();
+  scene.matrixAutoUpdate = false;
+
+  camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+  scene.add(camera);
 
   iframe = document.createElement('iframe');
+  iframe.width = window.innerWidth;
+  iframe.height = window.innerHeight;
   iframe.d = 2;
-  iframe.src = 'launcher/build/index.html';
+  iframe.src = 'http://lol.com';
   iframe.onload = () => {
+    const texture = new THREE.Texture(
+      null,
+      THREE.UVMapping,
+      THREE.ClampToEdgeWrapping,
+      THREE.ClampToEdgeWrapping,
+      THREE.NearestFilter,
+      THREE.NearestFilter,
+      THREE.RGBAFormat,
+      THREE.UnsignedByteType,
+      16
+    );
+    const properties = renderer.properties.get(texture);
+    properties.__webglTexture = iframe.texture;
+    properties.__webglInit = true;
+
+    screenQuad = new ScreenQuad({
+      texture,
+    });
+    scene.add(screenQuad);
+
     iframe.contentWindow.onmessage = m => {
       console.log('parent got message: ' + JSON.stringify(m.data));
     };
@@ -88,29 +177,14 @@ function init() {
       }
     }
   });
-
-  isMacOs = /darwin/.test(navigator.userAgent);
 }
 
 init();
 
-function animate(timestamp, frame) {
-  window.requestAnimationFrame(animate);
-
-  context.bindFramebuffer(context.READ_FRAMEBUFFER, fbo);
-  context.framebufferTexture2D(context.READ_FRAMEBUFFER, context.COLOR_ATTACHMENT0, context.TEXTURE_2D, iframe.browser.texture, 0);
-
-  context.bindFramebuffer(context.DRAW_FRAMEBUFFER, 0);
-
-  /* context.clearColor(1, 0, 0, 1);
-  context.clear(context.COLOR_BUFFER_BIT); */
-
-  const delta = isMacOs ? -245 : 0;
-  context.blitFramebuffer(0, 0, canvas.width, canvas.height, 0, canvas.height + delta, canvas.width, delta, context.COLOR_BUFFER_BIT, context.LINEAR);
-
-  context.finish();
+function animate() {
+  renderer.render(scene, camera);
 }
-window.requestAnimationFrame(animate);
+renderer.setAnimationLoop(animate);
 
 /* if (navigator.xr) {
   (async () => {
